--- a/property.html
+++ b/property.html
@@ -73,47 +73,103 @@
                     </div>
 
                     <div class="detail-card">
-                        <h2>Floor Plan</h2>
-                        <div class="floorplan-image">
-                            <img src="https://images.unsplash.com/photo-1503387762-592deb58ef4e?w=800&h=500&fit=crop" alt="Floor Plan">
-                        </div>
-                    </div>
-                </div>
+                        <h2>Land Legality & Environmental Compliance</h2>
+                        
+                        <div class="legality-grid">
+                            <div class="legality-item">
+                                <span class="legality-label">Title Status</span>
+                                <span class="legality-value verified">Clear & Verified</span>
+                            </div>
 
-                <!-- RIGHT COLUMN -->
-                <div class="details-right">
-                    <div class="price-card">
-                        <div class="price-amount">$2,450,000</div>
-                        <div class="price-subtext">Negotiable</div>
+                            <div class="legality-item">
+                                <span class="legality-label">Encumbrance Certificate</span>
+                                <span class="legality-value">12-Year EC Available</span>
+                            </div>
+
+                            <div class="legality-item">
+                                <span class="legality-label">Land Use Zoning</span>
+                                <span class="legality-value">Residential (Approved)</span>
+                            </div>
+
+                            <div class="legality-item">
+                                <span class="legality-label">Local Authority Approval</span>
+                                <span class="legality-value">CMDA Approved</span>
+                            </div>
+
+                            <div class="legality-item">
+                                <span class="legality-label">RERA Registration</span>
+                                <span class="legality-value verified">Registered</span>
+                            </div>
+
+                            <div class="legality-item">
+                                <span class="legality-label">Land Conversion Status</span>
+                                <span class="legality-value">Converted (NA Order Issued)</span>
+                            </div>
+
+                            <div class="legality-item">
+                                <span class="legality-label">Nearest Water Body</span>
+                                <span class="legality-value warning">Canal (420 m)</span>
+                            </div>
+
+                            <div class="legality-item">
+                                <span class="legality-label">Flood Risk Assessment</span>
+                                <span class="legality-value">Low Risk Zone</span>
+                            </div>
+
+                            <div class="legality-item">
+                                <span class="legality-label">Environmental Clearance</span>
+                                <span class="legality-value">Not Required</span>
+                            </div>
+
+                            <div class="legality-item">
+                                <span class="legality-label">Legal Disputes</span>
+                                <span class="legality-value verified">None Reported</span>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="highlights-card">
-                        <h3>Property Highlights</h3>
-                        <div class="highlight-item">
-                            <span class="highlight-label">Bedrooms</span>
-                            <span class="highlight-value">4</span>
+                            <div class="detail-card">
+                                <h2>Floor Plan</h2>
+                                <div class="floorplan-image">
+                                    <img src="https://images.unsplash.com/photo-1503387762-592deb58ef4e?w=800&h=500&fit=crop" alt="Floor Plan">
+                                </div>
+                            </div>
                         </div>
-                        <div class="highlight-item">
-                            <span class="highlight-label">Bathrooms</span>
-                            <span class="highlight-value">3</span>
-                        </div>
-                        <div class="highlight-item">
-                            <span class="highlight-label">Square Feet</span>
-                            <span class="highlight-value">3,200 sqft</span>
-                        </div>
-                        <div class="highlight-item">
-                            <span class="highlight-label">Lot Size</span>
-                            <span class="highlight-value">8,500 sqft</span>
-                        </div>
-                        <div class="highlight-item">
-                            <span class="highlight-label">Year Built</span>
-                            <span class="highlight-value">2022</span>
-                        </div>
-                        <div class="highlight-item">
-                            <span class="highlight-label">Property Type</span>
-                            <span class="highlight-value">Villa</span>
-                        </div>
-                    </div>
+
+                        <!-- RIGHT COLUMN -->
+                        <div class="details-right">
+                            <div class="price-card">
+                                <div class="price-amount">$2,450,000</div>
+                                <div class="price-subtext">Negotiable</div>
+                            </div>
+
+                            <div class="highlights-card">
+                                <h3>Property Highlights</h3>
+                                <div class="highlight-item">
+                                    <span class="highlight-label">Bedrooms</span>
+                                    <span class="highlight-value">4</span>
+                                </div>
+                                <div class="highlight-item">
+                                    <span class="highlight-label">Bathrooms</span>
+                                    <span class="highlight-value">3</span>
+                                </div>
+                                <div class="highlight-item">
+                                    <span class="highlight-label">Square Feet</span>
+                                    <span class="highlight-value">3,200 sqft</span>
+                                </div>
+                                <div class="highlight-item">
+                                    <span class="highlight-label">Lot Size</span>
+                                    <span class="highlight-value">8,500 sqft</span>
+                                </div>
+                                <div class="highlight-item">
+                                    <span class="highlight-label">Year Built</span>
+                                    <span class="highlight-value">2022</span>
+                                </div>
+                                <div class="highlight-item">
+                                    <span class="highlight-label">Property Type</span>
+                                    <span class="highlight-value">Villa</span>
+                                </div>
+                            </div>
 
                     <div class="agent-card">
                         <h3>Contact Agent</h3>
