--- a/listings.html
+++ b/listings.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
 </head>
+<script src="./filters.js"></script>
 <body>
     <!-- NAVIGATION -->
     <nav class="navbar">
