--- a/listings.html
+++ b/listings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Property Listings - LuxeHomes</title>
+    <title>Property Listings - UrbaNest</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
 </head>
@@ -12,7 +12,7 @@
     <!-- NAVIGATION -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="index.html" class="logo">LuxeHomes</a>
+            <a href="index.html" class="logo">UrbaNest</a>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="listings.html">Listings</a></li>
@@ -26,7 +26,7 @@
     <!-- PAGE HEADER -->
     <section class="page-header">
         <div class="container">
-            <h1>Premium Property Listings</h1>
+            <h1 class="site-title">Premium Property Listings</h1>
             <p>Browse our exclusive collection of luxury homes</p>
         </div>
     </section>
